50 more trials added; Models trained

--- a/MachineUnlearning.ipynb
+++ b/MachineUnlearning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 510,
    "id": "4e828435",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 511,
    "id": "a7e04a64",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 512,
    "id": "fec89a25",
    "metadata": {},
    "outputs": [],
@@ -168,12 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 513,
    "id": "b41e0a9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dowload the dataset\n",
+    "data_dir = './data/cifar10'\n",
     "if not os.path.exists(\"data/cifar10\"):\n",
     "    dataset_url = \"https://s3.amazonaws.com/fast-ai-imageclas/cifar10.tgz\"\n",
     "    download_url(dataset_url, '.')\n",
@@ -183,7 +184,6 @@
     "        tar.extractall(path='./data')\n",
     "        \n",
     "    # Look into the data directory\n",
-    "    data_dir = './data/cifar10'\n",
     "    print(os.listdir(data_dir))\n",
     "    classes = os.listdir(data_dir + \"/train\")\n",
     "    print(classes)"
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 514,
    "id": "29db69d8",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 515,
    "id": "27a417a0",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 516,
    "id": "7844cd60",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 517,
    "id": "54996a18",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 518,
    "id": "d6352284",
    "metadata": {},
    "outputs": [
@@ -265,8 +265,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 114 μs, sys: 9 μs, total: 123 μs\n",
-      "Wall time: 197 μs\n"
+      "CPU times: user 9 μs, sys: 1 μs, total: 10 μs\n",
+      "Wall time: 11.7 μs\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 519,
    "id": "d3769eeb",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_49074/3566456735.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_15570/3566456735.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))\n"
      ]
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 520,
    "id": "96f88a4f",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 521,
    "id": "65082f19",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 522,
    "id": "cfedd156",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 523,
    "id": "edbda37b",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 524,
    "id": "70736605",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 525,
    "id": "2fcc11a4",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_49074/1528628438.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_15570/1528628438.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))\n"
      ]
     },
@@ -444,7 +444,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 525,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 526,
    "id": "1170217b",
    "metadata": {},
    "outputs": [
@@ -466,19 +466,19 @@
      "output_type": "stream",
      "text": [
       "Optiming loss for class 0\n",
-      "Loss: 194.20635986328125\n",
-      "Loss: 42.94559097290039\n",
-      "Loss: 0.5248143672943115\n",
-      "Loss: -7.64359188079834\n",
-      "Loss: -11.172752380371094\n",
+      "Loss: 193.8587188720703\n",
+      "Loss: 42.81822967529297\n",
+      "Loss: 0.4366788864135742\n",
+      "Loss: -7.855965614318848\n",
+      "Loss: -11.4147310256958\n",
       "Optiming loss for class 2\n",
-      "Loss: 193.73837280273438\n",
-      "Loss: 42.71536636352539\n",
-      "Loss: 0.6515520811080933\n",
-      "Loss: -7.449089050292969\n",
-      "Loss: -11.104108810424805\n",
-      "CPU times: user 3.39 s, sys: 3.85 ms, total: 3.39 s\n",
-      "Wall time: 3.39 s\n"
+      "Loss: 193.79428100585938\n",
+      "Loss: 42.91462326049805\n",
+      "Loss: 0.6535582542419434\n",
+      "Loss: -7.580911159515381\n",
+      "Loss: -11.111040115356445\n",
+      "CPU times: user 3.52 s, sys: 0 ns, total: 3.52 s\n",
+      "Wall time: 3.52 s\n"
      ]
     }
    ],
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 527,
    "id": "09feaed0",
    "metadata": {},
    "outputs": [
@@ -533,9 +533,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss 1: 0.15700770413398743,Train Acc:11.376%\n",
-      "CPU times: user 1.44 s, sys: 15.8 ms, total: 1.46 s\n",
-      "Wall time: 1.46 s\n"
+      "Train loss 1: 0.16698904745101928,Train Acc:11.29%\n",
+      "CPU times: user 1.46 s, sys: 7.7 ms, total: 1.47 s\n",
+      "Wall time: 1.47 s\n"
      ]
     }
    ],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 528,
    "id": "bfcffec3",
    "metadata": {},
    "outputs": [
@@ -603,11 +603,11 @@
      "output_type": "stream",
      "text": [
       "Performance of Standard Forget Model on Forget Class\n",
-      "Accuracy: 0.048828125\n",
-      "Loss: 9.391439437866211\n",
+      "Accuracy: 0.09765625\n",
+      "Loss: 9.16808032989502\n",
       "Performance of Standard Forget Model on Retain Class\n",
-      "Accuracy: 68.47168207168579\n",
-      "Loss: 0.9366612434387207\n"
+      "Accuracy: 68.27148199081421\n",
+      "Loss: 0.9020348787307739\n"
      ]
     }
    ],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 529,
    "id": "ca2abac7",
    "metadata": {},
    "outputs": [
@@ -649,9 +649,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss 1: 0.09773157356262208,Train Acc:12.506%\n",
-      "CPU times: user 1.41 s, sys: 8.01 ms, total: 1.42 s\n",
-      "Wall time: 1.42 s\n"
+      "Train loss 1: 0.09509119766235352,Train Acc:12.54%\n",
+      "CPU times: user 1.41 s, sys: 15.8 ms, total: 1.43 s\n",
+      "Wall time: 1.43 s\n"
      ]
     }
    ],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 530,
    "id": "e74aa345",
    "metadata": {},
    "outputs": [
@@ -705,10 +705,10 @@
      "text": [
       "Performance of Standard Forget Model on Forget Class\n",
       "Accuracy: 0.0\n",
-      "Loss: 12.098747253417969\n",
+      "Loss: 13.169785499572754\n",
       "Performance of Standard Forget Model on Retain Class\n",
-      "Accuracy: 71.61620855331421\n",
-      "Loss: 0.8250831365585327\n"
+      "Accuracy: 69.94873285293579\n",
+      "Loss: 0.899518609046936\n"
      ]
     }
    ],
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 531,
    "id": "fc317073",
    "metadata": {},
    "outputs": [],
@@ -783,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
