--- a/MachineUnlearning.ipynb
+++ b/MachineUnlearning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "4e828435",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,12 @@
     "# torch.manual_seed(100) \n",
     "# So multiple, different models can be trained\n",
     "\n",
-    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
+    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "# Save the model\n",
+    "if not os.path.exists(\"data/paper/models\"):\n",
+    "    os.makedirs(\"data/paper/models\")\n",
+    "n = len(os.listdir(\"data/paper/models\"))"
    ]
   },
   {
@@ -47,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "a7e04a64",
    "metadata": {},
    "outputs": [],
@@ -98,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "fec89a25",
    "metadata": {},
    "outputs": [],
@@ -168,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "b41e0a9f",
    "metadata": {},
    "outputs": [],
@@ -191,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "29db69d8",
    "metadata": {},
    "outputs": [],
@@ -209,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "27a417a0",
    "metadata": {},
    "outputs": [],
@@ -220,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "7844cd60",
    "metadata": {},
    "outputs": [],
@@ -228,57 +233,6 @@
     "batch_size = 256\n",
     "train_dl = DataLoader(train_ds, batch_size, shuffle=True, num_workers=3, pin_memory=True)\n",
     "valid_dl = DataLoader(valid_ds, batch_size*2, num_workers=3, pin_memory=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "796f4d2b",
-   "metadata": {},
-   "source": [
-    "### Train and save the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "54996a18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model = resnet18(num_classes = 10).to(DEVICE)\n",
-    "\n",
-    "epochs = 40\n",
-    "max_lr = 0.01\n",
-    "grad_clip = 0.1\n",
-    "weight_decay = 1e-4\n",
-    "opt_func = torch.optim.Adam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "d6352284",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 117 μs, sys: 8 μs, total: 125 μs\n",
-      "Wall time: 122 μs\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "if not os.path.exists(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"):\n",
-    "    history = fit_one_cycle(epochs, max_lr, model, train_dl, valid_dl, \n",
-    "                                grad_clip=grad_clip, \n",
-    "                                weight_decay=weight_decay, \n",
-    "                                opt_func=opt_func)\n",
-    "\n",
-    "    torch.save(model.state_dict(), \"ResNET18_CIFAR10_ALL_CLASSES.pt\")"
    ]
   },
   {
@@ -291,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "d3769eeb",
    "metadata": {},
    "outputs": [
@@ -299,16 +253,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3850/3566456735.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))\n"
+      "/tmp/ipykernel_6196/2095261240.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load(f\"data/all/models/ResNET18_CIFAR10_ALL_CLASSES_{n}.pt\"))\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Loss': 1.4370468854904175, 'Acc': 0.7664005160331726}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "if train_new_one:\n",
-    "    model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))\n",
-    "    history = [evaluate(model, valid_dl)]\n",
-    "    history"
+    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model = resnet18(num_classes = 10).to(DEVICE)\n",
+    "\n",
+    "model.load_state_dict(torch.load(f\"data/all/models/ResNET18_CIFAR10_ALL_CLASSES_{n}.pt\"))\n",
+    "history = [evaluate(model, valid_dl)]\n",
+    "history"
    ]
   },
   {
@@ -321,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "96f88a4f",
    "metadata": {},
    "outputs": [],
@@ -338,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "65082f19",
    "metadata": {},
    "outputs": [],
@@ -352,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "cfedd156",
    "metadata": {},
    "outputs": [],
@@ -376,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "edbda37b",
    "metadata": {},
    "outputs": [],
@@ -393,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "70736605",
    "metadata": {},
    "outputs": [],
@@ -426,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "2fcc11a4",
    "metadata": {},
    "outputs": [
@@ -434,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3850/1528628438.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_6196/1528628438.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))\n"
      ]
     },
@@ -444,7 +410,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "1170217b",
    "metadata": {},
    "outputs": [
@@ -466,19 +432,19 @@
      "output_type": "stream",
      "text": [
       "Optiming loss for class 0\n",
-      "Loss: 193.11293029785156\n",
-      "Loss: 42.39717483520508\n",
-      "Loss: 0.46684086322784424\n",
-      "Loss: -7.803420066833496\n",
-      "Loss: -11.320260047912598\n",
+      "Loss: 193.3791046142578\n",
+      "Loss: 42.86967086791992\n",
+      "Loss: 0.566901683807373\n",
+      "Loss: -7.819306373596191\n",
+      "Loss: -11.398211479187012\n",
       "Optiming loss for class 2\n",
-      "Loss: 193.89295959472656\n",
-      "Loss: 43.24339294433594\n",
-      "Loss: 0.7145335674285889\n",
-      "Loss: -7.697686672210693\n",
-      "Loss: -11.135772705078125\n",
-      "CPU times: user 3.34 s, sys: 4.29 ms, total: 3.35 s\n",
-      "Wall time: 3.35 s\n"
+      "Loss: 194.13905334472656\n",
+      "Loss: 43.27894592285156\n",
+      "Loss: 0.8133056163787842\n",
+      "Loss: -7.577820777893066\n",
+      "Loss: -11.083878517150879\n",
+      "CPU times: user 7.35 s, sys: 3.71 ms, total: 7.36 s\n",
+      "Wall time: 7.36 s\n"
      ]
     }
    ],
@@ -518,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "09feaed0",
    "metadata": {},
    "outputs": [
@@ -533,9 +499,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss 1: 0.16196455769538878,Train Acc:11.386%\n",
-      "CPU times: user 1.39 s, sys: 19.5 ms, total: 1.41 s\n",
-      "Wall time: 1.41 s\n"
+      "Train loss 1: 0.16168901686668397,Train Acc:11.552%\n",
+      "CPU times: user 2.96 s, sys: 32.1 ms, total: 2.99 s\n",
+      "Wall time: 2.99 s\n"
      ]
     }
    ],
@@ -594,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "bfcffec3",
    "metadata": {},
    "outputs": [
@@ -603,11 +569,11 @@
      "output_type": "stream",
      "text": [
       "Performance of Standard Forget Model on Forget Class\n",
-      "Accuracy: 0.048828125\n",
-      "Loss: 10.652360916137695\n",
+      "Accuracy: 0.390625\n",
+      "Loss: 8.957792282104492\n",
       "Performance of Standard Forget Model on Retain Class\n",
-      "Accuracy: 66.59911870956421\n",
-      "Loss: 0.9514050483703613\n"
+      "Accuracy: 65.40771722793579\n",
+      "Loss: 1.0167930126190186\n"
      ]
     }
    ],
@@ -634,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "ca2abac7",
    "metadata": {},
    "outputs": [
@@ -649,9 +615,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss 1: 0.0974699963760376,Train Acc:12.49%\n",
-      "CPU times: user 1.37 s, sys: 12.2 ms, total: 1.38 s\n",
-      "Wall time: 1.38 s\n"
+      "Train loss 1: 0.09477706802368165,Train Acc:12.578%\n",
+      "CPU times: user 1.64 s, sys: 16 ms, total: 1.65 s\n",
+      "Wall time: 1.65 s\n"
      ]
     }
    ],
@@ -695,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "id": "e74aa345",
    "metadata": {},
    "outputs": [
@@ -705,10 +671,10 @@
      "text": [
       "Performance of Standard Forget Model on Forget Class\n",
       "Accuracy: 0.0\n",
-      "Loss: 12.251062393188477\n",
+      "Loss: 11.768539428710938\n",
       "Performance of Standard Forget Model on Retain Class\n",
-      "Accuracy: 72.41455316543579\n",
-      "Loss: 0.7763537168502808\n"
+      "Accuracy: 71.39892578125\n",
+      "Loss: 0.8327717185020447\n"
      ]
     }
    ],
@@ -726,32 +692,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4a26da5",
+   "metadata": {},
+   "source": [
+    "### Save Unlearned Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "id": "fc317073",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict\n",
-    "\n",
-    "def load_models_dict(path: str=\"data/paper/models\") -> Dict[str, torch.nn.Module]:\n",
-    "    \n",
-    "    model = resnet18(num_classes = 10).to(DEVICE = DEVICE)\n",
-    "    \n",
-    "    # load all the models\n",
-    "    md = {}\n",
-    "    for list in os.listdir(path):\n",
-    "        \n",
-    "        model.load_state_dict(torch.load(f=os.path.join(path, list), weights_only=True))\n",
-    "        model.eval()\n",
-    "        md[len(md)] = model\n",
-    "\n",
-    "    return md\n",
-    "\n",
-    "# Save the model\n",
-    "if not os.path.exists(\"data/paper/models\"):\n",
-    "    os.makedirs(\"data/paper/models\")\n",
-    "n = len(os.listdir(\"data/paper/models\"))\n",
     "torch.save(model.state_dict(), f\"data/paper/models/ResNET18_CIFAR10_UN_{n}.pt\")"
    ]
   },
