More Trials; Device Mapping

--- a/MachineUnlearning.ipynb
+++ b/MachineUnlearning.ipynb
@@ -272,7 +272,7 @@
     "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "model = resnet18(num_classes = 10).to(DEVICE)\n",
     "\n",
-    "model.load_state_dict(torch.load(f\"data/all/models/ResNET18_CIFAR10_ALL_CLASSES_{n}.pt\"))\n",
+    "model.load_state_dict(torch.load(f\"data/all/models/ResNET18_CIFAR10_ALL_CLASSES_{n}.pt\", map_location=DEVICE,))\n",
     "history = [evaluate(model, valid_dl)]\n",
     "history"
    ]
@@ -418,7 +418,7 @@
    "source": [
     "# loading the model\n",
     "model = resnet18(num_classes = 10).to(DEVICE)\n",
-    "model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))"
+    "model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\", map_location=DEVICE, map_location=DEVICE,))"
    ]
   },
   {
@@ -464,7 +464,7 @@
     "            total_loss = []\n",
     "            for batch in range(num_steps):\n",
     "                inputs = noises[cls]()\n",
-    "                labels = torch.zeros(batch_size).cuda()+class_label\n",
+    "                labels = torch.zeros(batch_size).to(DEVICE)+class_label\n",
     "                outputs = model(inputs)\n",
     "                loss = -F.cross_entropy(outputs, labels.long()) + 0.1*torch.mean(torch.sum(torch.square(inputs), [1, 2, 3]))\n",
     "                opt.zero_grad()\n",
@@ -706,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), f\"data/paper/models/ResNET18_CIFAR10_UN_{n}.pt\")"
+    "torch.save(model.state_dict(), f\"data/paper/models/ResNET18_CIFAR10_UN_{n}.pt\",)"
    ]
   },
   {
