30model run ready set

--- a/MachineUnlearningProposal.ipynb
+++ b/MachineUnlearningProposal.ipynb
@@ -863,14 +863,15 @@
     "from src.fyemu_tunable import main\n",
     "\n",
     "if True:\n",
-    "    model = main(\n",
-    "        new_baseline=False\n",
-    "    )\n",
-    "    \n",
-    "    if not os.path.exists(\"data/new/models\"):\n",
-    "        os.makedirs(\"data/new/models\")\n",
-    "    n = len(os.listdir(\"data/new/models\"))\n",
-    "    torch.save(model.state_dict(), f\"data/new/models/ResNET18_CIFAR10_UN_{n}.pt\")"
+    "    for i in range(29):\n",
+    "        model = main(\n",
+    "            new_baseline=False\n",
+    "        )\n",
+    "        \n",
+    "        if not os.path.exists(\"data/new/models\"):\n",
+    "            os.makedirs(\"data/new/models\")\n",
+    "        n = len(os.listdir(\"data/new/models\"))\n",
+    "        torch.save(model.state_dict(), f\"data/new/models/ResNET18_CIFAR10_UN_{n}.pt\")"
    ]
   },
   {
@@ -1092,32 +1093,26 @@
     }
    ],
    "source": [
-    "kl_exact_to_gemu= {key: src.metrics.kl_divergence_between_models(exact_ms[0], gemu_ms[0], loader) for key, loader in loaders.items()}"
+    "kl_exact_to_gemu = {}\n",
+    "for model in gemu_ms.values():\n",
+    "    new = {key: src.metrics.kl_divergence_between_models(exact_ms[0], model, loader) for key, loader in loaders.items()}\n",
+    "    if len(kl_exact_to_gemu) == 0:\n",
+    "        for name in new.keys():\n",
+    "            kl_exact_to_gemu[name] = []\n",
+    "    for name in new.keys():\n",
+    "        kl_exact_to_gemu[name].append(new[name])\n",
+    "kl_exact_to_gemu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "8c45e669",
+   "execution_count": null,
+   "id": "dc403256",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 3.1400943976275797,\n",
-       " 1: 2.5975292026996617,\n",
-       " 2: 3.17433748579329,\n",
-       " 3: 2.5042692273855214,\n",
-       " 4: 3.0013855218887335,\n",
-       " 5: 3.023870861530304}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "for key in kl_exact_to_gemu.keys():\n",
+    "    kl_exact_to_gemu[key] = sum(kl_exact_to_gemu[key])/len(kl_exact_to_gemu[key])\n",
     "kl_exact_to_gemu"
    ]
   },
@@ -1324,7 +1319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
